@@ -1,0 +1,11 @@
+{"end":"248956422","start":"1","score":null,"phase":null,"attributes":{"chromosome":["1"],"genome":["chromosome"],"mol_type":["genomic DNA"],"ID":["id0"],"Name":["1"],"gbkey":["Src"],"Dbxref":["taxon:9606"]},"type":"region","strand":"+","seq_id":"NC_000001.11","source":"RefSeq"}
+{"source":"BestRefSeq","seq_id":"NC_000001.11","strand":"+","phase":null,"attributes":{"gene":["DDX11L1"],"description":["DEAD/H (Asp-Glu-Ala-Asp/His) box helicase 11 like 1"],"Dbxref":["GeneID:100287102","HGNC:HGNC:37102"],"gbkey":["Gene"],"Name":["DDX11L1"],"ID":["gene0"],"pseudo":["true"]},"type":"gene","end":"14409","start":"11874","score":null}
+{"end":"14409","start":"11874","score":null,"phase":null,"attributes":{"ID":["rna0"],"transcript_id":["NR_046018.2"],"Parent":["gene0"],"gene":["DDX11L1"],"product":["DEAD/H (Asp-Glu-Ala-Asp/His) box helicase 11 like 1"],"Dbxref":["GeneID:100287102","Genbank:NR_046018.2","HGNC:HGNC:37102"],"gbkey":["misc_RNA"],"Name":["NR_046018.2"]},"type":"transcript","strand":"+","source":"BestRefSeq","seq_id":"NC_000001.11"}
+{"source":"BestRefSeq","seq_id":"NC_000001.11","strand":"+","type":"exon","attributes":{"ID":["id1"],"transcript_id":["NR_046018.2"],"gbkey":["misc_RNA"],"Parent":["rna0"],"product":["DEAD/H (Asp-Glu-Ala-Asp/His) box helicase 11 like 1"],"gene":["DDX11L1"],"Dbxref":["GeneID:100287102","Genbank:NR_046018.2","HGNC:HGNC:37102"]},"phase":null,"start":"11874","score":null,"end":"12227"}
+{"start":"12613","score":null,"end":"12721","type":"exon","attributes":{"Dbxref":["GeneID:100287102","Genbank:NR_046018.2","HGNC:HGNC:37102"],"product":["DEAD/H (Asp-Glu-Ala-Asp/His) box helicase 11 like 1"],"gene":["DDX11L1"],"Parent":["rna0"],"gbkey":["misc_RNA"],"transcript_id":["NR_046018.2"],"ID":["id2"]},"phase":null,"strand":"+","source":"BestRefSeq","seq_id":"NC_000001.11"}
+{"seq_id":"NC_000001.11","source":"BestRefSeq","strand":"+","phase":null,"attributes":{"Parent":["rna0"],"Dbxref":["GeneID:100287102","Genbank:NR_046018.2","HGNC:HGNC:37102"],"gene":["DDX11L1"],"product":["DEAD/H (Asp-Glu-Ala-Asp/His) box helicase 11 like 1"],"ID":["id3"],"gbkey":["misc_RNA"],"transcript_id":["NR_046018.2"]},"type":"exon","end":"14409","score":null,"start":"13221"}
+{"seq_id":"NC_000001.11","source":"BestRefSeq","strand":"-","phase":null,"attributes":{"ID":["gene1"],"pseudo":["true"],"description":["WAS protein family homolog 7 pseudogene"],"gene_synonym":["FAM39F","WASH5P"],"Name":["WASH7P"],"gbkey":["Gene"],"gene":["WASH7P"],"Dbxref":["GeneID:653635","HGNC:HGNC:38034"]},"type":"gene","end":"29370","start":"14362","score":null}
+{"start":"14362","score":null,"end":"29370","seq_id":"NC_000001.11","source":"BestRefSeq","strand":"-","type":"transcript","attributes":{"transcript_id":["NR_024540.1"],"ID":["rna1"],"Dbxref":["GeneID:653635","Genbank:NR_024540.1","HGNC:HGNC:38034"],"product":["WAS protein family homolog 7 pseudogene"],"gene":["WASH7P"],"Parent":["gene1"],"Name":["NR_024540.1"],"gbkey":["misc_RNA"]},"phase":null}
+{"type":"exon","phase":null,"attributes":{"Dbxref":["GeneID:653635","Genbank:NR_024540.1","HGNC:HGNC:38034"],"product":["WAS protein family homolog 7 pseudogene"],"gene":["WASH7P"],"Parent":["rna1"],"gbkey":["misc_RNA"],"transcript_id":["NR_024540.1"],"ID":["id4"]},"strand":"-","source":"BestRefSeq","seq_id":"NC_000001.11","score":null,"start":"29321","end":"29370"}
+{"strand":"-","source":"BestRefSeq","seq_id":"NC_000001.11","type":"exon","attributes":{"gbkey":["misc_RNA"],"transcript_id":["NR_024540.1"],"ID":["id5"],"Dbxref":["GeneID:653635","Genbank:NR_024540.1","HGNC:HGNC:38034"],"gene":["WASH7P"],"product":["WAS protein family homolog 7 pseudogene"],"Parent":["rna1"]},"phase":null,"score":null,"start":"24738","end":"24891"}
+{"end":"18366","score":null,"start":"18268","phase":null,"attributes":{"ID":["id6"],"transcript_id":["NR_024540.1"],"gbkey":["misc_RNA"],"Parent":["rna1"],"gene":["WASH7P"],"product":["WAS protein family homolog 7 pseudogene"],"Dbxref":["GeneID:653635","Genbank:NR_024540.1","HGNC:HGNC:38034"]},"type":"exon","strand":"-","seq_id":"NC_000001.11","source":"BestRefSeq"}
