@@ -1,6 +1,7 @@
 Revision history for App-RecordStream-Bio
 
 {{$NEXT}}
+    - New command fromgff3 for parsing GFF3 annotation files
 
 0.18  2016-07-06 12:17:07 PDT
     - Point folks looking for fastq input/output to recs-fastq
